Kafka Connector 오류 해결