@@ -10,45 +10,42 @@ import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
 
 import java.sql.Timestamp;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
-@Service
+
 @Slf4j
 @RequiredArgsConstructor
+@Service
 public class OrderProducer {
     private final KafkaTemplate<String, String> kafkaTemplate;
 
-    List<Field> fieldList = List.of(new Field("bigint", true, "user_id"),
-            new Field("bigint", true, "store_id"),
-            new Field("bigint", true, "coupon_id"),
-            new Field("integer", true, "sum_price"),
-            new Field("string", true, "request"),
-            new Field("timestamp", true, "updated_at"),
-            new Field("timestamp", true, "created_at")
+    List<Field> fields = Arrays.asList(
+            new Field("int64", false, "user_id"),
+            new Field("int64", false, "store_id"),
+            new Field("int64", true, "coupon_id"),
+            new Field("int32", false, "sum_price"),
+            new Field("string", true, "request")
     );
 
     Schema schema = Schema.builder()
             .type("struct")
-            .fieldList(fieldList)
+            .fields(fields)
             .optional(false)
             .name("orders")
             .build();
 
     public void send(String topic, OrderDto orderDto) {
         Payload payload = Payload.builder()
-                .userId(orderDto.getUserId())
-                .storeId(orderDto.getStoreId())
-                .couponId(orderDto.getCouponId())
-                .sumPrice(orderDto.getSumPrice())
+                .user_id(orderDto.getUserId())
+                .store_id(orderDto.getStoreId())
+                .coupon_id(orderDto.getCouponId())
+                .sum_price(orderDto.getSumPrice())
                 .request(orderDto.getRequest())
-                .updated_at(new Timestamp(System.currentTimeMillis()))
-                .created_at(new Timestamp(System.currentTimeMillis()))
                 .build();
 
-        KafkaOrderDto kafkaOrderDto = KafkaOrderDto.builder()
-                .schema(schema)
-                .payload(payload)
-                .build();
+        KafkaOrderDto kafkaOrderDto = new KafkaOrderDto(schema, payload);
 
         ObjectMapper mapper = new ObjectMapper();
         String jsonToString = "";
@@ -58,7 +55,7 @@ public class OrderProducer {
         } catch (JsonProcessingException e) {
             e.printStackTrace();
         }
-
+        log.debug(jsonToString);
         kafkaTemplate.send(topic, jsonToString);
         log.info("Order Producer sent data from the Order microservice: {}", kafkaOrderDto);
     }
